- Fixed various layout issues in UserHomepage and UserProfilePage

--- a/src/css/UserHomepage.css
+++ b/src/css/UserHomepage.css
@@ -31,6 +31,16 @@
     top: 0px;
     position: relative;
     transition: all 0.5s;
+    height: 370px;
+}
+
+.trip-card-front-element {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
 }
 
 .trip-card:hover {
@@ -39,24 +49,35 @@
     color: white;
 }
 
-.card-img {
-    object-fit: contain;
+.trip-card-img {
+    z-index: 0;
 }
 
-.card-title {
+.trip-card-title {
     font-size: 2rem;
 }
 
-.card-subtitle {
+.trip-card-subtitle {
     font-size: 1.1rem;
 }
 
-.card-button {
+.trip-card-body {
+    background: radial-gradient(circle, rgba(0,0,0,0.5), rgba(0,0,0,0.8));
+    color: white;
+    transition: all 0.5s;
+    z-index: 1;
+}
+
+.trip-card-body:hover {
+    background: radial-gradient(circle, rgba(0,0,0,0.2), rgba(0,0,0,0.6));
+}
+
+.trip-card-button {
     background: transparent;
     transition: all 0.25s;
 }
 
-.card-button:hover {
+.trip-card-button:hover {
     background: radial-gradient(circle, rgba(255,255,255, 0.5),rgba(255,255,255, 0.8));
     text-decoration: none;
 }
