--- a/src/css/userProfilePage.css
+++ b/src/css/userProfilePage.css
@@ -79,25 +79,20 @@ html {
     color:white;
 }
 
-.card-front-text {
+.profile-trip-card-front-text {
     background: radial-gradient(circle,rgba(0,0,0,0.5),rgba(0,0,0,0.7)) ;
     color: white;
-    height: 100%;
-    bottom: 0%;
-    margin: 0;
+}
+
+.profile-trip-card-title {
     font-size: 2rem;
 }
 
-
-.card-title {
-    font-size: 2rem;
-}
-
-.card-subtitle {
+.profile-trip-card-subtitle {
     font-size: 1.5rem;
 }
 
-.card-text{
+.profile-trip-card-text{
     font-size: 1.5em;
 }
 
